--- a/WebAPINews/appsettings.json
+++ b/WebAPINews/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AppDb": "Server=.\\SQLEXPRESS;Database=NotiBlazor; Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
