--- a/WebAPINews/appsettings.Development.json
+++ b/WebAPINews/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=NotiBlazor; Trusted_Connection=True;",
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
